--- a/plugins/redis-parentbuild/gradle.properties
+++ b/plugins/redis-parentbuild/gradle.properties
@@ -16,8 +16,8 @@
 # limitations under the License.
 #
 
-pluginId                  = com.redislabs.gradle.redislabs-parentbuild
-pluginShortName           = redislabsParentBuild
-pluginDisplayName         = Parent build plugin for Redis Labs Projects
-pluginImplementationClass = com.redislabs.gradle.RedisLabsParentBuildPlugin
-project_description       = Parent build plugin for Redis Labs Projects
+pluginId                  = com.redis.gradle.redis-parentbuild
+pluginShortName           = redisParentBuild
+pluginDisplayName         = Parent build plugin for Redis Projects
+pluginImplementationClass = com.redis.gradle.RedisParentBuildPlugin
+project_description       = Parent build plugin for Redis Projects
