--- a/plugins/redis-parentpom/gradle.properties
+++ b/plugins/redis-parentpom/gradle.properties
@@ -16,8 +16,8 @@
 # limitations under the License.
 #
 
-pluginId                  = com.redislabs.gradle.redislabs-parentpom
-pluginShortName           = redislabsParentPom
-pluginDisplayName         = Parent POM plugin for Redis Labs Projects
-pluginImplementationClass = com.redislabs.gradle.RedisLabsParentPomPlugin
-project_description       = Parent POM plugin for Redis Labs Projects
+pluginId                  = com.redis.gradle.redis-parentpom
+pluginShortName           = redisParentPom
+pluginDisplayName         = Parent POM plugin for Redis Projects
+pluginImplementationClass = com.redis.gradle.RedisParentPomPlugin
+project_description       = Parent POM plugin for Redis Projects
