--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -15,7 +15,7 @@ release:
     changelog:
       sort: DESC
       formatted: ALWAYS
-      change: '- {{commitShortHash}} {{commitTitle}}'
+      format: '- {{commitShortHash}} {{commitTitle}}'
       labelers:
         - label: 'feature'
           title: 'Resolves #'
